fix: minor fixes
Refs: XRDDEV-2805